--- a/blog.css
+++ b/blog.css
@@ -1,126 +1,49 @@
-.escudo {
-    position: relative; top: -200px; left: 1700px ;margin: 0px;
+body {
+    background: linear-gradient(135deg, green, yellow, green);
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.escudo, .cronograma {
     width: 200px;
     height: 200px;
 }
-.tema {
-    text-align: center;
-    border: 2px solid black;
-    padding: 8px;
-    position: relative; top: 50px; 
-}
-.fecha {
-    text-align: center;
-    border: 2px solid black;
-    padding: 8px;
-}
-h1 {
-    background-color: yellowgreen;
-    
-}
-h3 {
-    background-color: azure;
-}
-.cronograma {
-    position: relative; top: -200px; left: 700px; margin: 0px;
-    width: 500px;
-    height: 500px;
-    border: 6px solid green;
-}
-body {
-    background: linear-gradient(135deg, green, yellow, green);
-    height: 100vh;
-    margin: 0PX;
-}
-.utm {
+
+.utm, .inscripciones {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 30px;
     border: 2px solid black;
     background-color: lightslategrey;
+    padding: 10px;
+    margin: 10px;
 }
+
 button {
-    padding: 10px 20px;           
-    color: black;            
-    background-color:  springgreen;  
-    border: 6px solid black;  
-    border-radius: 5px;       
-    cursor: pointer;                
-    display: inline-block;    
+    padding: 10px 20px;
+    font-size: 20px;
+    background-color: springgreen;
+    border: 2px solid black;
+    border-radius: 5px;
+    cursor: pointer;
     transition: background-color 0.3s ease;
-    font-size: 30px;
-    margin-left: 30px;
 }
+
 button:hover {
     background-color: teal;
 }
-.inscripciones {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 30px;
-    margin-left: 550px;
-    border: 2px solid black;
-    background-color: lightslategrey;
+
+img {
+    margin: 20px;
 }
-.Saludo {
+
+.Saludo, .Nombre {
     text-align: center;
-    font-size: 50px;
-    font-style: italic;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    background-color: gold;
-    border: 3px solid black;
-}
-.Nombre {
-    text-align: center;
-    font-size: 30px;
-    font-style: oblique;
+    font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
-    background-color: darkgrey;
-    border: 3px solid black;
-}
-.aa {
-    position: relative; top: 00px; left: 100px; margin: 0px;
-    width: 300px;
-    height: 300px;
-    border: 6px solid yellow;
-}
-.bb {
-    position: relative; top: 500px; left: 400px; margin: 0px;
-    width: 300px;
-    height: 300px;
-    border: 6px solid aqua;
-}
-.cc {
-    position: relative; top: -200px; left: 100px; margin: 0px;
-    width: 300px;
-    height: 300px;
-    border: 6px solid rebeccapurple;
-}
-.dd {
-    position: relative; top: -200px; left: 150px; margin: 0px;
-    width: 300px;
-    height: 300px;
-    border: 6px solid darkcyan;
-}
-.rr {
-    position: relative; top: 00px; left: 200px; margin: 0px;
-    width: 300px;
-    height: 300px;
-    border: 6px solid firebrick;
-}
-.ss {
-    position: relative; top: 150px; left: -500px; margin: 0px;
-    width: 300px;
-    height: 300px;
-    border: 6px solid black;
-}
-.tt {
-    position: relative; top: 100px; left: 200px; margin: 0px;
-    width: 300px;
-    height: 300px;
-    border: 6px solid maroon;
-}
-.yy {
-    position: relative; top: -200px; left: 400px; margin: 0px;
-    width: 300px;
-    height: 300px;
-    border: 6px solid blue;
+    background-color: lightgrey;
+    padding: 20px;
+    border: 2px solid black;
 }
